# agent_team_work

./: .gitignore  AGENTS.md  ARCHITECTURE.md  HEARTBEAT.md  PROJECT_WORKING_AGREEMENT.md  README.md  SOUL.md  USER.md  WORKING_AGREEMENT.md  docker-compose.yml
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/utils/: mod.rs
frontend/: index.html  package.json
frontend/docker/: Dockerfile
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Markets.tsx  Strategies.tsx  Trading.tsx
trading-backend/: Cargo.toml
trading-backend/docker/: Dockerfile
trading-backend/migrations/: 001_initial_schema.sql
trading-backend/src/: db.rs  main.rs
trading-backend/src/api/: mod.rs
trading-backend/src/auth/: middleware.rs  mod.rs
trading-backend/src/db/: handlers.rs  mod.rs
trading-backend/src/exchange/: api.rs  mod.rs
trading-backend/src/models/: mod.rs
trading-frontend/: .eslintrc.json  index.html  package-lock.json  package.json
trading-frontend/src/: App.tsx  index.css
trading-frontend/src/components/: TradingChart.tsx
trading-frontend/src/hooks/: useCryptoPrices.ts
trading-frontend/src/pages/: Dashboard.tsx  Login.tsx  Markets.tsx  Strategies.tsx  Trading.tsx
trading-system/backend/: Cargo.toml  config.yaml
trading-system/backend/migrations/: 001_create_orders.sql  002_create_positions.sql  003_create_candles.sql
trading-system/backend/src/: lib.rs  main.rs
trading-system/backend/src/api/: auth.rs  health.rs  market.rs  mod.rs  orders.rs  paper_trading.rs  portfolio.rs  strategies.rs  websocket.rs
trading-system/backend/src/core/: mod.rs
trading-system/backend/src/core/market/: binance_ws.rs  collector.rs  mod.rs
trading-system/backend/src/core/order/: executor.rs  mod.rs
trading-system/backend/src/core/risk/: manager.rs  mod.rs
trading-system/backend/src/core/strategy/: engine.rs  mod.rs  strategies.rs
trading-system/backend/src/data/: database.rs  mod.rs  repository.rs
trading-system/backend/src/models/: mod.rs  paper_trading.rs  strategy.rs  user.rs
trading-system/frontend/: index.html  package.json
trading-system/frontend/src/: App.tsx
trading-system/frontend/src/components/: Layout.tsx  PriceChart.tsx
trading-system/frontend/src/hooks/: useWebSocket.ts
trading-system/frontend/src/pages/: Charts.tsx  Dashboard.tsx  Markets.tsx  Settings.tsx  Strategies.tsx
trading-system/frontend/src/services/: api.ts
